@@ -29,6 +29,9 @@
  *
  * $Id$
  *
+ * X-1.26       Brian Wheeler                                   02-FEB-2008
+ *      Completed LPT support so it works with FreeBSD as a guest OS.
+ *
  * X-1.25       Camiel Vanderhoeven                             08-JAN-2008
  *      Comments.
  *
@@ -201,6 +204,7 @@ class CAliM1543C : public CPCIDevice
   // LPT controller
   u8 lpt_read(u32 address);
   void lpt_write(u32 address, u8 data);
+  void lpt_reset();
 
   /// The state structure contains all elements that need to be saved to the statefile.
   struct SAli_state {
@@ -362,6 +366,8 @@ class CAliM1543C : public CPCIDevice
 
     u8 lpt_data;
     u8 lpt_control;
+    u8 lpt_status;
+    bool lpt_init;
   } state;
 
   FILE *lpt;
